backend/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> list_commands
Rule 2     list_commands -> list_commands commands
Rule 3     list_commands -> commands
Rule 4     commands -> command_mkdisk
Rule 5     commands -> command_rmdisk
Rule 6     commands -> command_fdisk
Rule 7     commands -> command_mount
Rule 8     commands -> command_mkfs
Rule 9     commands -> command_pause
Rule 10    commands -> command_rep
Rule 11    commands -> COMMENT
Rule 12    command_mkdisk -> MKDISK params_mkdisk
Rule 13    params_mkdisk -> params_mkdisk param_mkdisk
Rule 14    params_mkdisk -> param_mkdisk
Rule 15    param_mkdisk -> GUION PATH IGUAL CADENA
Rule 16    param_mkdisk -> GUION PATH IGUAL CADENA_SC
Rule 17    param_mkdisk -> GUION SIZE IGUAL ENTERO
Rule 18    param_mkdisk -> GUION UNIT IGUAL CADENA_SC
Rule 19    param_mkdisk -> GUION FIT IGUAL CADENA_SC
Rule 20    command_rmdisk -> RMDISK GUION PATH IGUAL CADENA
Rule 21    command_rmdisk -> RMDISK GUION PATH IGUAL CADENA_SC
Rule 22    command_fdisk -> FDISK params_fdisk
Rule 23    params_fdisk -> params_fdisk param_fdisk
Rule 24    params_fdisk -> param_fdisk
Rule 25    param_fdisk -> GUION PATH IGUAL CADENA
Rule 26    param_fdisk -> GUION PATH IGUAL CADENA_SC
Rule 27    param_fdisk -> GUION SIZE IGUAL ENTERO
Rule 28    param_fdisk -> GUION UNIT IGUAL CADENA_SC
Rule 29    param_fdisk -> GUION NAME IGUAL CADENA
Rule 30    param_fdisk -> GUION NAME IGUAL CADENA_SC
Rule 31    param_fdisk -> GUION TYPE IGUAL CADENA_SC
Rule 32    param_fdisk -> GUION FIT IGUAL CADENA_SC
Rule 33    command_mount -> MOUNT params_mount
Rule 34    params_mount -> params_mount param_mount
Rule 35    params_mount -> param_mount
Rule 36    param_mount -> GUION PATH IGUAL CADENA
Rule 37    param_mount -> GUION PATH IGUAL CADENA_SC
Rule 38    param_mount -> GUION NAME IGUAL CADENA
Rule 39    param_mount -> GUION NAME IGUAL CADENA_SC
Rule 40    command_mkfs -> MKFS params_mkfs
Rule 41    params_mkfs -> params_mkfs param_mkfs
Rule 42    params_mkfs -> param_mkfs
Rule 43    param_mkfs -> GUION ID IGUAL CADENA
Rule 44    param_mkfs -> GUION ID IGUAL CADENA_SC
Rule 45    param_mkfs -> GUION TYPE IGUAL CADENA_SC
Rule 46    command_pause -> PAUSE
Rule 47    command_rep -> REP params_rep
Rule 48    params_rep -> params_rep param_rep
Rule 49    params_rep -> param_rep
Rule 50    param_rep -> GUION NAME IGUAL CADENA_SC
Rule 51    param_rep -> GUION PATH IGUAL CADENA
Rule 52    param_rep -> GUION PATH IGUAL CADENA_SC
Rule 53    param_rep -> GUION ID IGUAL CADENA
Rule 54    param_rep -> GUION ID IGUAL CADENA_SC
Rule 55    param_rep -> GUION RUTA IGUAL CADENA
Rule 56    param_rep -> GUION RUTA IGUAL CADENA_SC

Terminals, with rules where they appear

CADENA               : 15 20 25 29 36 38 43 51 53 55
CADENA_SC            : 16 18 19 21 26 28 30 31 32 37 39 44 45 50 52 54 56
COMMENT              : 11
ENTERO               : 17 27
FDISK                : 22
FIT                  : 19 32
GUION                : 15 16 17 18 19 20 21 25 26 27 28 29 30 31 32 36 37 38 39 43 44 45 50 51 52 53 54 55 56
ID                   : 43 44 53 54
IGUAL                : 15 16 17 18 19 20 21 25 26 27 28 29 30 31 32 36 37 38 39 43 44 45 50 51 52 53 54 55 56
MKDISK               : 12
MKFS                 : 40
MOUNT                : 33
NAME                 : 29 30 38 39 50
PATH                 : 15 16 20 21 25 26 36 37 51 52
PAUSE                : 46
REP                  : 47
RMDISK               : 20 21
RUTA                 : 55 56
SIZE                 : 17 27
TYPE                 : 31 45
UNIT                 : 18 28
error                : 

Nonterminals, with rules where they appear

command_fdisk        : 6
command_mkdisk       : 4
command_mkfs         : 8
command_mount        : 7
command_pause        : 9
command_rep          : 10
command_rmdisk       : 5
commands             : 2 3
init                 : 0
list_commands        : 1 2
param_fdisk          : 23 24
param_mkdisk         : 13 14
param_mkfs           : 41 42
param_mount          : 34 35
param_rep            : 48 49
params_fdisk         : 22 23
params_mkdisk        : 12 13
params_mkfs          : 40 41
params_mount         : 33 34
params_rep           : 47 48

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . list_commands
    (2) list_commands -> . list_commands commands
    (3) list_commands -> . commands
    (4) commands -> . command_mkdisk
    (5) commands -> . command_rmdisk
    (6) commands -> . command_fdisk
    (7) commands -> . command_mount
    (8) commands -> . command_mkfs
    (9) commands -> . command_pause
    (10) commands -> . command_rep
    (11) commands -> . COMMENT
    (12) command_mkdisk -> . MKDISK params_mkdisk
    (20) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (21) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA_SC
    (22) command_fdisk -> . FDISK params_fdisk
    (33) command_mount -> . MOUNT params_mount
    (40) command_mkfs -> . MKFS params_mkfs
    (46) command_pause -> . PAUSE
    (47) command_rep -> . REP params_rep

    COMMENT         shift and go to state 11
    MKDISK          shift and go to state 12
    RMDISK          shift and go to state 13
    FDISK           shift and go to state 14
    MOUNT           shift and go to state 15
    MKFS            shift and go to state 16
    PAUSE           shift and go to state 17
    REP             shift and go to state 18

    init                           shift and go to state 1
    list_commands                  shift and go to state 2
    commands                       shift and go to state 3
    command_mkdisk                 shift and go to state 4
    command_rmdisk                 shift and go to state 5
    command_fdisk                  shift and go to state 6
    command_mount                  shift and go to state 7
    command_mkfs                   shift and go to state 8
    command_pause                  shift and go to state 9
    command_rep                    shift and go to state 10

state 1

    (0) S' -> init .



state 2

    (1) init -> list_commands .
    (2) list_commands -> list_commands . commands
    (4) commands -> . command_mkdisk
    (5) commands -> . command_rmdisk
    (6) commands -> . command_fdisk
    (7) commands -> . command_mount
    (8) commands -> . command_mkfs
    (9) commands -> . command_pause
    (10) commands -> . command_rep
    (11) commands -> . COMMENT
    (12) command_mkdisk -> . MKDISK params_mkdisk
    (20) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (21) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA_SC
    (22) command_fdisk -> . FDISK params_fdisk
    (33) command_mount -> . MOUNT params_mount
    (40) command_mkfs -> . MKFS params_mkfs
    (46) command_pause -> . PAUSE
    (47) command_rep -> . REP params_rep

    $end            reduce using rule 1 (init -> list_commands .)
    COMMENT         shift and go to state 11
    MKDISK          shift and go to state 12
    RMDISK          shift and go to state 13
    FDISK           shift and go to state 14
    MOUNT           shift and go to state 15
    MKFS            shift and go to state 16
    PAUSE           shift and go to state 17
    REP             shift and go to state 18

    commands                       shift and go to state 19
    command_mkdisk                 shift and go to state 4
    command_rmdisk                 shift and go to state 5
    command_fdisk                  shift and go to state 6
    command_mount                  shift and go to state 7
    command_mkfs                   shift and go to state 8
    command_pause                  shift and go to state 9
    command_rep                    shift and go to state 10

state 3

    (3) list_commands -> commands .

    COMMENT         reduce using rule 3 (list_commands -> commands .)
    MKDISK          reduce using rule 3 (list_commands -> commands .)
    RMDISK          reduce using rule 3 (list_commands -> commands .)
    FDISK           reduce using rule 3 (list_commands -> commands .)
    MOUNT           reduce using rule 3 (list_commands -> commands .)
    MKFS            reduce using rule 3 (list_commands -> commands .)
    PAUSE           reduce using rule 3 (list_commands -> commands .)
    REP             reduce using rule 3 (list_commands -> commands .)
    $end            reduce using rule 3 (list_commands -> commands .)


state 4

    (4) commands -> command_mkdisk .

    COMMENT         reduce using rule 4 (commands -> command_mkdisk .)
    MKDISK          reduce using rule 4 (commands -> command_mkdisk .)
    RMDISK          reduce using rule 4 (commands -> command_mkdisk .)
    FDISK           reduce using rule 4 (commands -> command_mkdisk .)
    MOUNT           reduce using rule 4 (commands -> command_mkdisk .)
    MKFS            reduce using rule 4 (commands -> command_mkdisk .)
    PAUSE           reduce using rule 4 (commands -> command_mkdisk .)
    REP             reduce using rule 4 (commands -> command_mkdisk .)
    $end            reduce using rule 4 (commands -> command_mkdisk .)


state 5

    (5) commands -> command_rmdisk .

    COMMENT         reduce using rule 5 (commands -> command_rmdisk .)
    MKDISK          reduce using rule 5 (commands -> command_rmdisk .)
    RMDISK          reduce using rule 5 (commands -> command_rmdisk .)
    FDISK           reduce using rule 5 (commands -> command_rmdisk .)
    MOUNT           reduce using rule 5 (commands -> command_rmdisk .)
    MKFS            reduce using rule 5 (commands -> command_rmdisk .)
    PAUSE           reduce using rule 5 (commands -> command_rmdisk .)
    REP             reduce using rule 5 (commands -> command_rmdisk .)
    $end            reduce using rule 5 (commands -> command_rmdisk .)


state 6

    (6) commands -> command_fdisk .

    COMMENT         reduce using rule 6 (commands -> command_fdisk .)
    MKDISK          reduce using rule 6 (commands -> command_fdisk .)
    RMDISK          reduce using rule 6 (commands -> command_fdisk .)
    FDISK           reduce using rule 6 (commands -> command_fdisk .)
    MOUNT           reduce using rule 6 (commands -> command_fdisk .)
    MKFS            reduce using rule 6 (commands -> command_fdisk .)
    PAUSE           reduce using rule 6 (commands -> command_fdisk .)
    REP             reduce using rule 6 (commands -> command_fdisk .)
    $end            reduce using rule 6 (commands -> command_fdisk .)


state 7

    (7) commands -> command_mount .

    COMMENT         reduce using rule 7 (commands -> command_mount .)
    MKDISK          reduce using rule 7 (commands -> command_mount .)
    RMDISK          reduce using rule 7 (commands -> command_mount .)
    FDISK           reduce using rule 7 (commands -> command_mount .)
    MOUNT           reduce using rule 7 (commands -> command_mount .)
    MKFS            reduce using rule 7 (commands -> command_mount .)
    PAUSE           reduce using rule 7 (commands -> command_mount .)
    REP             reduce using rule 7 (commands -> command_mount .)
    $end            reduce using rule 7 (commands -> command_mount .)


state 8

    (8) commands -> command_mkfs .

    COMMENT         reduce using rule 8 (commands -> command_mkfs .)
    MKDISK          reduce using rule 8 (commands -> command_mkfs .)
    RMDISK          reduce using rule 8 (commands -> command_mkfs .)
    FDISK           reduce using rule 8 (commands -> command_mkfs .)
    MOUNT           reduce using rule 8 (commands -> command_mkfs .)
    MKFS            reduce using rule 8 (commands -> command_mkfs .)
    PAUSE           reduce using rule 8 (commands -> command_mkfs .)
    REP             reduce using rule 8 (commands -> command_mkfs .)
    $end            reduce using rule 8 (commands -> command_mkfs .)


state 9

    (9) commands -> command_pause .

    COMMENT         reduce using rule 9 (commands -> command_pause .)
    MKDISK          reduce using rule 9 (commands -> command_pause .)
    RMDISK          reduce using rule 9 (commands -> command_pause .)
    FDISK           reduce using rule 9 (commands -> command_pause .)
    MOUNT           reduce using rule 9 (commands -> command_pause .)
    MKFS            reduce using rule 9 (commands -> command_pause .)
    PAUSE           reduce using rule 9 (commands -> command_pause .)
    REP             reduce using rule 9 (commands -> command_pause .)
    $end            reduce using rule 9 (commands -> command_pause .)


state 10

    (10) commands -> command_rep .

    COMMENT         reduce using rule 10 (commands -> command_rep .)
    MKDISK          reduce using rule 10 (commands -> command_rep .)
    RMDISK          reduce using rule 10 (commands -> command_rep .)
    FDISK           reduce using rule 10 (commands -> command_rep .)
    MOUNT           reduce using rule 10 (commands -> command_rep .)
    MKFS            reduce using rule 10 (commands -> command_rep .)
    PAUSE           reduce using rule 10 (commands -> command_rep .)
    REP             reduce using rule 10 (commands -> command_rep .)
    $end            reduce using rule 10 (commands -> command_rep .)


state 11

    (11) commands -> COMMENT .

    COMMENT         reduce using rule 11 (commands -> COMMENT .)
    MKDISK          reduce using rule 11 (commands -> COMMENT .)
    RMDISK          reduce using rule 11 (commands -> COMMENT .)
    FDISK           reduce using rule 11 (commands -> COMMENT .)
    MOUNT           reduce using rule 11 (commands -> COMMENT .)
    MKFS            reduce using rule 11 (commands -> COMMENT .)
    PAUSE           reduce using rule 11 (commands -> COMMENT .)
    REP             reduce using rule 11 (commands -> COMMENT .)
    $end            reduce using rule 11 (commands -> COMMENT .)


state 12

    (12) command_mkdisk -> MKDISK . params_mkdisk
    (13) params_mkdisk -> . params_mkdisk param_mkdisk
    (14) params_mkdisk -> . param_mkdisk
    (15) param_mkdisk -> . GUION PATH IGUAL CADENA
    (16) param_mkdisk -> . GUION PATH IGUAL CADENA_SC
    (17) param_mkdisk -> . GUION SIZE IGUAL ENTERO
    (18) param_mkdisk -> . GUION UNIT IGUAL CADENA_SC
    (19) param_mkdisk -> . GUION FIT IGUAL CADENA_SC

    GUION           shift and go to state 22

    params_mkdisk                  shift and go to state 20
    param_mkdisk                   shift and go to state 21

state 13

    (20) command_rmdisk -> RMDISK . GUION PATH IGUAL CADENA
    (21) command_rmdisk -> RMDISK . GUION PATH IGUAL CADENA_SC

    GUION           shift and go to state 23


state 14

    (22) command_fdisk -> FDISK . params_fdisk
    (23) params_fdisk -> . params_fdisk param_fdisk
    (24) params_fdisk -> . param_fdisk
    (25) param_fdisk -> . GUION PATH IGUAL CADENA
    (26) param_fdisk -> . GUION PATH IGUAL CADENA_SC
    (27) param_fdisk -> . GUION SIZE IGUAL ENTERO
    (28) param_fdisk -> . GUION UNIT IGUAL CADENA_SC
    (29) param_fdisk -> . GUION NAME IGUAL CADENA
    (30) param_fdisk -> . GUION NAME IGUAL CADENA_SC
    (31) param_fdisk -> . GUION TYPE IGUAL CADENA_SC
    (32) param_fdisk -> . GUION FIT IGUAL CADENA_SC

    GUION           shift and go to state 26

    params_fdisk                   shift and go to state 24
    param_fdisk                    shift and go to state 25

state 15

    (33) command_mount -> MOUNT . params_mount
    (34) params_mount -> . params_mount param_mount
    (35) params_mount -> . param_mount
    (36) param_mount -> . GUION PATH IGUAL CADENA
    (37) param_mount -> . GUION PATH IGUAL CADENA_SC
    (38) param_mount -> . GUION NAME IGUAL CADENA
    (39) param_mount -> . GUION NAME IGUAL CADENA_SC

    GUION           shift and go to state 29

    params_mount                   shift and go to state 27
    param_mount                    shift and go to state 28

state 16

    (40) command_mkfs -> MKFS . params_mkfs
    (41) params_mkfs -> . params_mkfs param_mkfs
    (42) params_mkfs -> . param_mkfs
    (43) param_mkfs -> . GUION ID IGUAL CADENA
    (44) param_mkfs -> . GUION ID IGUAL CADENA_SC
    (45) param_mkfs -> . GUION TYPE IGUAL CADENA_SC

    GUION           shift and go to state 32

    params_mkfs                    shift and go to state 30
    param_mkfs                     shift and go to state 31

state 17

    (46) command_pause -> PAUSE .

    COMMENT         reduce using rule 46 (command_pause -> PAUSE .)
    MKDISK          reduce using rule 46 (command_pause -> PAUSE .)
    RMDISK          reduce using rule 46 (command_pause -> PAUSE .)
    FDISK           reduce using rule 46 (command_pause -> PAUSE .)
    MOUNT           reduce using rule 46 (command_pause -> PAUSE .)
    MKFS            reduce using rule 46 (command_pause -> PAUSE .)
    PAUSE           reduce using rule 46 (command_pause -> PAUSE .)
    REP             reduce using rule 46 (command_pause -> PAUSE .)
    $end            reduce using rule 46 (command_pause -> PAUSE .)


state 18

    (47) command_rep -> REP . params_rep
    (48) params_rep -> . params_rep param_rep
    (49) params_rep -> . param_rep
    (50) param_rep -> . GUION NAME IGUAL CADENA_SC
    (51) param_rep -> . GUION PATH IGUAL CADENA
    (52) param_rep -> . GUION PATH IGUAL CADENA_SC
    (53) param_rep -> . GUION ID IGUAL CADENA
    (54) param_rep -> . GUION ID IGUAL CADENA_SC
    (55) param_rep -> . GUION RUTA IGUAL CADENA
    (56) param_rep -> . GUION RUTA IGUAL CADENA_SC

    GUION           shift and go to state 35

    params_rep                     shift and go to state 33
    param_rep                      shift and go to state 34

state 19

    (2) list_commands -> list_commands commands .

    COMMENT         reduce using rule 2 (list_commands -> list_commands commands .)
    MKDISK          reduce using rule 2 (list_commands -> list_commands commands .)
    RMDISK          reduce using rule 2 (list_commands -> list_commands commands .)
    FDISK           reduce using rule 2 (list_commands -> list_commands commands .)
    MOUNT           reduce using rule 2 (list_commands -> list_commands commands .)
    MKFS            reduce using rule 2 (list_commands -> list_commands commands .)
    PAUSE           reduce using rule 2 (list_commands -> list_commands commands .)
    REP             reduce using rule 2 (list_commands -> list_commands commands .)
    $end            reduce using rule 2 (list_commands -> list_commands commands .)


state 20

    (12) command_mkdisk -> MKDISK params_mkdisk .
    (13) params_mkdisk -> params_mkdisk . param_mkdisk
    (15) param_mkdisk -> . GUION PATH IGUAL CADENA
    (16) param_mkdisk -> . GUION PATH IGUAL CADENA_SC
    (17) param_mkdisk -> . GUION SIZE IGUAL ENTERO
    (18) param_mkdisk -> . GUION UNIT IGUAL CADENA_SC
    (19) param_mkdisk -> . GUION FIT IGUAL CADENA_SC

    COMMENT         reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    MKDISK          reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    RMDISK          reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    FDISK           reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    MOUNT           reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    MKFS            reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    PAUSE           reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    REP             reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    $end            reduce using rule 12 (command_mkdisk -> MKDISK params_mkdisk .)
    GUION           shift and go to state 22

    param_mkdisk                   shift and go to state 36

state 21

    (14) params_mkdisk -> param_mkdisk .

    GUION           reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    COMMENT         reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    MKDISK          reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    RMDISK          reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    FDISK           reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    MOUNT           reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    MKFS            reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    PAUSE           reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    REP             reduce using rule 14 (params_mkdisk -> param_mkdisk .)
    $end            reduce using rule 14 (params_mkdisk -> param_mkdisk .)


state 22

    (15) param_mkdisk -> GUION . PATH IGUAL CADENA
    (16) param_mkdisk -> GUION . PATH IGUAL CADENA_SC
    (17) param_mkdisk -> GUION . SIZE IGUAL ENTERO
    (18) param_mkdisk -> GUION . UNIT IGUAL CADENA_SC
    (19) param_mkdisk -> GUION . FIT IGUAL CADENA_SC

    PATH            shift and go to state 37
    SIZE            shift and go to state 38
    UNIT            shift and go to state 39
    FIT             shift and go to state 40


state 23

    (20) command_rmdisk -> RMDISK GUION . PATH IGUAL CADENA
    (21) command_rmdisk -> RMDISK GUION . PATH IGUAL CADENA_SC

    PATH            shift and go to state 41


state 24

    (22) command_fdisk -> FDISK params_fdisk .
    (23) params_fdisk -> params_fdisk . param_fdisk
    (25) param_fdisk -> . GUION PATH IGUAL CADENA
    (26) param_fdisk -> . GUION PATH IGUAL CADENA_SC
    (27) param_fdisk -> . GUION SIZE IGUAL ENTERO
    (28) param_fdisk -> . GUION UNIT IGUAL CADENA_SC
    (29) param_fdisk -> . GUION NAME IGUAL CADENA
    (30) param_fdisk -> . GUION NAME IGUAL CADENA_SC
    (31) param_fdisk -> . GUION TYPE IGUAL CADENA_SC
    (32) param_fdisk -> . GUION FIT IGUAL CADENA_SC

    COMMENT         reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    MKDISK          reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    RMDISK          reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    FDISK           reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    MOUNT           reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    MKFS            reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    PAUSE           reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    REP             reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    $end            reduce using rule 22 (command_fdisk -> FDISK params_fdisk .)
    GUION           shift and go to state 26

    param_fdisk                    shift and go to state 42

state 25

    (24) params_fdisk -> param_fdisk .

    GUION           reduce using rule 24 (params_fdisk -> param_fdisk .)
    COMMENT         reduce using rule 24 (params_fdisk -> param_fdisk .)
    MKDISK          reduce using rule 24 (params_fdisk -> param_fdisk .)
    RMDISK          reduce using rule 24 (params_fdisk -> param_fdisk .)
    FDISK           reduce using rule 24 (params_fdisk -> param_fdisk .)
    MOUNT           reduce using rule 24 (params_fdisk -> param_fdisk .)
    MKFS            reduce using rule 24 (params_fdisk -> param_fdisk .)
    PAUSE           reduce using rule 24 (params_fdisk -> param_fdisk .)
    REP             reduce using rule 24 (params_fdisk -> param_fdisk .)
    $end            reduce using rule 24 (params_fdisk -> param_fdisk .)


state 26

    (25) param_fdisk -> GUION . PATH IGUAL CADENA
    (26) param_fdisk -> GUION . PATH IGUAL CADENA_SC
    (27) param_fdisk -> GUION . SIZE IGUAL ENTERO
    (28) param_fdisk -> GUION . UNIT IGUAL CADENA_SC
    (29) param_fdisk -> GUION . NAME IGUAL CADENA
    (30) param_fdisk -> GUION . NAME IGUAL CADENA_SC
    (31) param_fdisk -> GUION . TYPE IGUAL CADENA_SC
    (32) param_fdisk -> GUION . FIT IGUAL CADENA_SC

    PATH            shift and go to state 43
    SIZE            shift and go to state 44
    UNIT            shift and go to state 45
    NAME            shift and go to state 46
    TYPE            shift and go to state 47
    FIT             shift and go to state 48


state 27

    (33) command_mount -> MOUNT params_mount .
    (34) params_mount -> params_mount . param_mount
    (36) param_mount -> . GUION PATH IGUAL CADENA
    (37) param_mount -> . GUION PATH IGUAL CADENA_SC
    (38) param_mount -> . GUION NAME IGUAL CADENA
    (39) param_mount -> . GUION NAME IGUAL CADENA_SC

    COMMENT         reduce using rule 33 (command_mount -> MOUNT params_mount .)
    MKDISK          reduce using rule 33 (command_mount -> MOUNT params_mount .)
    RMDISK          reduce using rule 33 (command_mount -> MOUNT params_mount .)
    FDISK           reduce using rule 33 (command_mount -> MOUNT params_mount .)
    MOUNT           reduce using rule 33 (command_mount -> MOUNT params_mount .)
    MKFS            reduce using rule 33 (command_mount -> MOUNT params_mount .)
    PAUSE           reduce using rule 33 (command_mount -> MOUNT params_mount .)
    REP             reduce using rule 33 (command_mount -> MOUNT params_mount .)
    $end            reduce using rule 33 (command_mount -> MOUNT params_mount .)
    GUION           shift and go to state 29

    param_mount                    shift and go to state 49

state 28

    (35) params_mount -> param_mount .

    GUION           reduce using rule 35 (params_mount -> param_mount .)
    COMMENT         reduce using rule 35 (params_mount -> param_mount .)
    MKDISK          reduce using rule 35 (params_mount -> param_mount .)
    RMDISK          reduce using rule 35 (params_mount -> param_mount .)
    FDISK           reduce using rule 35 (params_mount -> param_mount .)
    MOUNT           reduce using rule 35 (params_mount -> param_mount .)
    MKFS            reduce using rule 35 (params_mount -> param_mount .)
    PAUSE           reduce using rule 35 (params_mount -> param_mount .)
    REP             reduce using rule 35 (params_mount -> param_mount .)
    $end            reduce using rule 35 (params_mount -> param_mount .)


state 29

    (36) param_mount -> GUION . PATH IGUAL CADENA
    (37) param_mount -> GUION . PATH IGUAL CADENA_SC
    (38) param_mount -> GUION . NAME IGUAL CADENA
    (39) param_mount -> GUION . NAME IGUAL CADENA_SC

    PATH            shift and go to state 50
    NAME            shift and go to state 51


state 30

    (40) command_mkfs -> MKFS params_mkfs .
    (41) params_mkfs -> params_mkfs . param_mkfs
    (43) param_mkfs -> . GUION ID IGUAL CADENA
    (44) param_mkfs -> . GUION ID IGUAL CADENA_SC
    (45) param_mkfs -> . GUION TYPE IGUAL CADENA_SC

    COMMENT         reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    MKDISK          reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    RMDISK          reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    FDISK           reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    MOUNT           reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    MKFS            reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    PAUSE           reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    REP             reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    $end            reduce using rule 40 (command_mkfs -> MKFS params_mkfs .)
    GUION           shift and go to state 32

    param_mkfs                     shift and go to state 52

state 31

    (42) params_mkfs -> param_mkfs .

    GUION           reduce using rule 42 (params_mkfs -> param_mkfs .)
    COMMENT         reduce using rule 42 (params_mkfs -> param_mkfs .)
    MKDISK          reduce using rule 42 (params_mkfs -> param_mkfs .)
    RMDISK          reduce using rule 42 (params_mkfs -> param_mkfs .)
    FDISK           reduce using rule 42 (params_mkfs -> param_mkfs .)
    MOUNT           reduce using rule 42 (params_mkfs -> param_mkfs .)
    MKFS            reduce using rule 42 (params_mkfs -> param_mkfs .)
    PAUSE           reduce using rule 42 (params_mkfs -> param_mkfs .)
    REP             reduce using rule 42 (params_mkfs -> param_mkfs .)
    $end            reduce using rule 42 (params_mkfs -> param_mkfs .)


state 32

    (43) param_mkfs -> GUION . ID IGUAL CADENA
    (44) param_mkfs -> GUION . ID IGUAL CADENA_SC
    (45) param_mkfs -> GUION . TYPE IGUAL CADENA_SC

    ID              shift and go to state 53
    TYPE            shift and go to state 54


state 33

    (47) command_rep -> REP params_rep .
    (48) params_rep -> params_rep . param_rep
    (50) param_rep -> . GUION NAME IGUAL CADENA_SC
    (51) param_rep -> . GUION PATH IGUAL CADENA
    (52) param_rep -> . GUION PATH IGUAL CADENA_SC
    (53) param_rep -> . GUION ID IGUAL CADENA
    (54) param_rep -> . GUION ID IGUAL CADENA_SC
    (55) param_rep -> . GUION RUTA IGUAL CADENA
    (56) param_rep -> . GUION RUTA IGUAL CADENA_SC

    COMMENT         reduce using rule 47 (command_rep -> REP params_rep .)
    MKDISK          reduce using rule 47 (command_rep -> REP params_rep .)
    RMDISK          reduce using rule 47 (command_rep -> REP params_rep .)
    FDISK           reduce using rule 47 (command_rep -> REP params_rep .)
    MOUNT           reduce using rule 47 (command_rep -> REP params_rep .)
    MKFS            reduce using rule 47 (command_rep -> REP params_rep .)
    PAUSE           reduce using rule 47 (command_rep -> REP params_rep .)
    REP             reduce using rule 47 (command_rep -> REP params_rep .)
    $end            reduce using rule 47 (command_rep -> REP params_rep .)
    GUION           shift and go to state 35

    param_rep                      shift and go to state 55

state 34

    (49) params_rep -> param_rep .

    GUION           reduce using rule 49 (params_rep -> param_rep .)
    COMMENT         reduce using rule 49 (params_rep -> param_rep .)
    MKDISK          reduce using rule 49 (params_rep -> param_rep .)
    RMDISK          reduce using rule 49 (params_rep -> param_rep .)
    FDISK           reduce using rule 49 (params_rep -> param_rep .)
    MOUNT           reduce using rule 49 (params_rep -> param_rep .)
    MKFS            reduce using rule 49 (params_rep -> param_rep .)
    PAUSE           reduce using rule 49 (params_rep -> param_rep .)
    REP             reduce using rule 49 (params_rep -> param_rep .)
    $end            reduce using rule 49 (params_rep -> param_rep .)


state 35

    (50) param_rep -> GUION . NAME IGUAL CADENA_SC
    (51) param_rep -> GUION . PATH IGUAL CADENA
    (52) param_rep -> GUION . PATH IGUAL CADENA_SC
    (53) param_rep -> GUION . ID IGUAL CADENA
    (54) param_rep -> GUION . ID IGUAL CADENA_SC
    (55) param_rep -> GUION . RUTA IGUAL CADENA
    (56) param_rep -> GUION . RUTA IGUAL CADENA_SC

    NAME            shift and go to state 56
    PATH            shift and go to state 57
    ID              shift and go to state 58
    RUTA            shift and go to state 59


state 36

    (13) params_mkdisk -> params_mkdisk param_mkdisk .

    GUION           reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    COMMENT         reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    MKDISK          reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    RMDISK          reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    FDISK           reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    MOUNT           reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    MKFS            reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    PAUSE           reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    REP             reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)
    $end            reduce using rule 13 (params_mkdisk -> params_mkdisk param_mkdisk .)


state 37
